tests/NormalTests/paczka1/fuzzy1/37539575.err
Error in line 6: i0h S8 38,6
Error in line 2: t4F1ZwViuw S762 18,4
Error in line 21: D11iZ38 S867 55,0
Error in line 36: Rx6o S8 36,2
